--- a/index.html
+++ b/index.html
@@ -3,38 +3,67 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Barbearia Alura</title>
-		<link rel="stylesheet" href="style-home.css">
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Rubik+Beastly&family=Source+Code+Pro:wght@700&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Barbearia Alura</h1>
+			<div class="caixa">
+				<h1><img src="logo.png"></h1>
+
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contato.html">Contato</a></li>
+					</ul>
+				</nav>
+			</div>
 		</header>
 
-		<img id="banner" src="banner.jpg">
+		<img class="banner" src="banner.jpg">
+		<main>
+			<section class="principal">
+				<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
-	 
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+				<img class="utensilios" src="./utensilios.jpg" alt="Utensilios de um Barbeiro.">
+		
+				<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+				<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-		</div>
+				<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+			</section>
+			<section class="mapa"> 
+				<h3 class="titulo-principal"> Nosso Estabelecimento</h3>
+				<p>Nosso estabelecimento esta localizado no centro da cidade.</p>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.8304772016936!2d-43.194936184486785!3d-22.956469545418383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f0fa823cebb%3A0x6db083b0ac5b2e0c!2zUmVzaWxpYSBFZHVjYcOnw6Nv!5e0!3m2!1spt-BR!2sbr!4v1636750023705!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+				
+			</section>
 
-		<div class="beneficios">
-			<h3 class="titulo-centralizado">Benefícios</h3>
-
-			<ul>
-				<li class="itens">Atendimento aos Clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais Qualificados</li>
-			</ul>
-
-			<img src="beneficios.jpg" class="imagembeneficios">
-		</div>
-
+			<section class="beneficios">
+				<h3 class="titulo-principal">Benefícios</h3>
+				<div class="conteudobeneficios">
+					<ul class="listabeneficios">
+						<li class="itens">Atendimento aos Clientes</li>
+						<li class="itens">Espaço diferenciado</li>
+						<li class="itens">Localização</li>
+						<li class="itens">Profissionais Qualificados</li>
+						<li class="itens">Pontualidade</li>
+						<li class="itens">Limpeza</li>
+					</ul><img src="beneficios.jpg" class="imagembeneficios">
+				</div>
+				<div class="VIDEO">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+			</section>
+		</main>
+		<footer>
+			<img src="logo-branco.png">
+			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+		</footer>
 	</body>
 </html>
